--- a/new.html
+++ b/new.html
@@ -18,5 +18,5 @@
 <center><h3><i>YOUR ORDER HAS BEEN SUBMITTED !</i></h3></center>
 <center>
 <BUTTON></BUTTON>
-<a href="index2.html"> <button>back</button></a></center>
+<a href="index.html"> <button>back</button></a></center>
 </html>
